tests/health/gold/sdk/tests__lsp__show_bad_completion_test.toit.gold
tests/lsp/show_bad_completion_test.toit:5:8: error: Package for prefix 'xyz' not found
import xyz show foo
       ^~~
